<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/match_details_text"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home_name_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textStyle="bold"
            tools:text="Arsenal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/club_name_text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/away_name_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            tools:text="Real Madrid" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home_goals_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            tools:text="Mesut Ozil" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/goal_text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/away_goals_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="textEnd"
            tools:text="Karim benzema" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home_formation_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            tools:text="4-3-3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/formation_text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/away_formation_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="textEnd"
            tools:text="4-4-2" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home_red_card_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            tools:text="Mesut Ozil" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/red_card_text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/away_red_card_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="textEnd"
            tools:text="Karim benzema" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home_yellow_card_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            tools:text="Mesut Ozil" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/yellow_cards_text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/away_yellow_card_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="textEnd"
            tools:text="Karim benzema" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home_sub_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            tools:text="Peter Cech" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/subtitutes_text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/away_sub_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="textEnd"
            tools:text="Modric" />

    </LinearLayout>

</LinearLayout>